<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KnowledgeFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#AF6921"
            android:background="#F3DC05"
            android:paddingTop="5dp"
            android:text=" Knowledge-家庭省電小知識"
            android:textSize="28sp">
        </TextView>

        <RelativeLayout
            android:id="@+id/RL_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tv_1">
            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="冰箱省電小知識"
                android:textSize="36dp"
                android:textColor="#CADF29"
                />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifImageView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/rainbow" />

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_2"
                android:text="1.「冰箱收納的整齊位置擺放」可減少冰箱打開翻找食材的時間，減少耗電"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_3"
                android:text="2.「食物待溫度降低後再放入」目的是避免冰箱未降溫而拼命運轉，導致過度耗電"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_4"
                android:text="3.「不要塞住冷氣出口」冷氣排放口被物品擋住，無法有效降溫"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_5"
                android:text="4.「適當的溫度設定」原理同空調，若溫度設定太低，亦會造成大量耗電。"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_6"
                android:text="5.「不要放過多食材」除了能避免難找到食材的長時間翻找，也能避免冷氣循環變差，無法有效冷卻，一般來說建議7分滿即可"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_7"
                android:text="6.「沒事不要又開又關」每次的開闔都會讓冰箱為了恢復低溫而耗電"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
            <TextView
                android:id="@+id/tv_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_8"
                android:text="7.「定期更換冰箱門膠條」這點每個家庭幾乎零達成，通常一買新機就用到壞掉，但其實沒有定期更換，膠條容易疲乏，冷氣外洩而導致保冷效果低落"
                android:textColor="#000000"
                android:textSize="24dp"
                android:layout_marginTop="15dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RL_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RL_1">
            <TextView
                android:id="@+id/tv_10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="台灣電力公司"
                android:textColor="#3F51B5"
                android:textSize="28dp"
                android:textStyle="italic" />
            <Button
                android:id="@+id/btn_10"
                android:layout_below="@id/tv_10"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:background="#FDEBEB"
                android:text="@string/台灣電力公司"
                android:autoLink="web"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/tv_11"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="節電標章全球資訊網"
                android:textColor="#3F51B5"
                android:textSize="28dp"
                android:textStyle="italic"
                android:layout_below="@id/btn_10"/>
            <Button
                android:id="@+id/btn_11"
                android:layout_below="@id/tv_11"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:background="#FDEBEB"
                android:text="@string/節能標章"
                android:autoLink="web"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="工研院-家庭電器用電家計算簿"
                android:textColor="#3F51B5"
                android:textSize="28dp"
                android:textStyle="italic"
                android:layout_below="@id/btn_11"/>
            <Button
                android:id="@+id/btn_12"
                android:layout_below="@id/tv_12"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:background="#FDEBEB"
                android:text="@string/工研院"
                android:autoLink="web"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="政大社科院-綠色能源資源總中心"
                android:textColor="#3F51B5"
                android:textSize="28dp"
                android:textStyle="italic"
                android:layout_below="@id/btn_12"/>
            <Button
                android:id="@+id/btn_13"
                android:layout_below="@id/tv_13"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:background="#FDEBEB"
                android:text="@string/政大社科院"
                android:autoLink="web"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/tv_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="能源教育資源總中心"
                android:textColor="#3F51B5"
                android:textSize="28dp"
                android:textStyle="italic"
                android:layout_below="@id/btn_13"/>
            <Button
                android:id="@+id/btn_14"
                android:layout_below="@id/tv_14"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:background="#FDEBEB"
                android:text="@string/能源中心"
                android:autoLink="web"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="到底囉!!"
            android:textSize="24sp"
            android:layout_below="@id/RL_2"
            android:layout_marginTop="50dp">
        </TextView>
    </RelativeLayout>
</ScrollView>